💄 Fix navbar spacings

--- a/assets/sass/_text-styles.sass
+++ b/assets/sass/_text-styles.sass
@@ -122,9 +122,16 @@ body
   letter-spacing: 1px
   text-transform: uppercase
 
-.tag
+.caption
   font-family: gt-america-mono-medium
   font-size: 13px
   line-height: 24px
   letter-spacing: 1px
+  text-transform: uppercase
+
+.secret
+  font-family: gt-america-mono-medium
+  font-size: 10px
+  line-height: 24px
+  letter-spacing: 0.5px
   text-transform: uppercase
